<package>
  <name>udpmulti_transport</name>
  <version>0.0.1</version>
  <description>udpmulti_transport</description>
  <maintainer email="smagnenat@ethz.ch">Stephane Magnenat</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/udpmulti_transport</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Cedric Pradalier</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>message_transport_common</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>message_transport_common</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>message_transport_common</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ludpmulti_transport" cflags="-I${prefix}/include"/>
</export>

</package>